[gd_scene load_steps=19 format=3 uid="uid://o6g61xdkjii0"]

[ext_resource type="Script" uid="uid://qaysak7mjhy6" path="res://examples/inventory_grid_stacked_transfer.gd" id="1_yjyyb"]
[ext_resource type="Script" uid="uid://d0pfc3q6sof8y" path="res://addons/gloot/ui/ctrl_inventory_grid.gd" id="2_ptyr5"]
[ext_resource type="Texture2D" uid="uid://bpmdtgysdm2tp" path="res://images/field_background.png" id="3_lwfya"]
[ext_resource type="Texture2D" uid="uid://cdhuw0juxw3up" path="res://images/field_highlighted_background.png" id="4_8hltm"]
[ext_resource type="Script" uid="uid://trghhrgo3fax" path="res://addons/gloot/ui/ctrl_item_slot.gd" id="6_wlx5u"]
[ext_resource type="JSON" path="res://tests/data/protoset_grid.json" id="8_mr2pf"]
[ext_resource type="Script" uid="uid://5hfig5q3x8it" path="res://addons/gloot/core/inventory.gd" id="9_a6m37"]
[ext_resource type="JSON" path="res://itemki.json" id="10_1wuv2"]
[ext_resource type="Script" uid="uid://b8hbvp4kl88cn" path="res://addons/gloot/core/constraints/grid_constraint.gd" id="10_6njuc"]
[ext_resource type="Script" uid="uid://c6wangdtwc4m7" path="res://addons/gloot/core/item_slot.gd" id="10_lyc83"]

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("3_lwfya")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("4_8hltm")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="5"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.92549, 0.152941, 1)

[sub_resource type="StyleBoxTexture" id="3"]
texture = ExtResource("3_lwfya")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="4"]
texture = ExtResource("4_8hltm")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="6"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.92549, 0.152941, 1)

[sub_resource type="StyleBoxTexture" id="7"]
texture = ExtResource("3_lwfya")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="8"]
texture = ExtResource("4_8hltm")
region_rect = Rect2(0, 0, 32, 32)

[node name="InventoryGridStackedTransfer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjyyb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CtrlInventoryGridLeft" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer" node_paths=PackedStringArray("inventory")]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
script = ExtResource("2_ptyr5")
inventory = NodePath("../../../../../InventoryLeft")
field_style = SubResource("1")
field_highlighted_style = SubResource("2")
selection_style = SubResource("5")

[node name="BtnSortLeft" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitLeft" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2

[node name="CtrlInventoryGridMid" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer4/PanelContainer" node_paths=PackedStringArray("inventory")]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
script = ExtResource("2_ptyr5")
inventory = NodePath("../../../../../InventoryMid")
field_style = SubResource("1")
field_highlighted_style = SubResource("2")
selection_style = SubResource("5")

[node name="BtnSortMid" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitMid" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
layout_mode = 2

[node name="CtrlInventoryGridMid2" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer5/PanelContainer" node_paths=PackedStringArray("inventory")]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
script = ExtResource("2_ptyr5")
inventory = NodePath("../../../../../InventoryMid2")
field_style = SubResource("1")
field_highlighted_style = SubResource("2")
selection_style = SubResource("5")

[node name="BtnSortMid2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitMid2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CtrlInventoryGridRight" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2" node_paths=PackedStringArray("inventory")]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
script = ExtResource("2_ptyr5")
inventory = NodePath("../../../../../InventoryRight")
field_style = SubResource("3")
field_highlighted_style = SubResource("4")
selection_style = SubResource("6")

[node name="BtnSortRight" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="BtnSplitRight" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Item Slot:"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CtrlItemSlot" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer3/PanelContainer" node_paths=PackedStringArray("item_slot")]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
script = ExtResource("6_wlx5u")
item_slot = NodePath("../../../../../ItemSlot")
icon_stretch_mode = 5
slot_style = SubResource("7")
slot_highlighted_style = SubResource("8")

[node name="BtnUnequip" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Unequip"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Drag and drop items to transfer them from one inventory to the other.
Press the 'Sort' buttons to sort the inventories.
Press the 'Split' buttons to split the selected stack in half.
Drag items from the right inventory onto the item slot to equip it.
Use the 'Unequip' button to unequip it."

[node name="LblInfo" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0

[node name="ItemSlot" type="Node" parent="."]
script = ExtResource("10_lyc83")
protoset = ExtResource("8_mr2pf")

[node name="InventoryLeft" type="Node" parent="."]
script = ExtResource("9_a6m37")
protoset = ExtResource("8_mr2pf")
_serialized_format = {
"constraints": {
"res://addons/gloot/core/constraints/grid_constraint.gd": {
"data": {
"item_positions": {
"1": "Vector2i(0, 1)"
},
"size": "Vector2i(5, 5)"
},
"name": &"@Node@21881"
}
},
"items": [{
"properties": {
"max_stack_size": {
"type": 2,
"value": "5"
},
"stack_size": {
"type": 2,
"value": "2"
}
},
"protoset": "res://tests/data/protoset_grid.json",
"prototype_id": "item_1x1"
}, {
"properties": {
"max_stack_size": {
"type": 2,
"value": "5"
},
"stack_size": {
"type": 2,
"value": "2"
}
},
"protoset": "res://tests/data/protoset_grid.json",
"prototype_id": "item_2x2"
}],
"node_name": "InventoryLeft",
"protoset": "res://tests/data/protoset_grid.json"
}

[node name="GridConstraint" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21841" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21846" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="_Node_21841" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="_Node_21846" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21883" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21881" type="Node" parent="InventoryLeft"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="InventoryMid" type="Node" parent="."]
script = ExtResource("9_a6m37")
protoset = ExtResource("10_1wuv2")
_serialized_format = {
"constraints": {
"res://addons/gloot/core/constraints/grid_constraint.gd": {
"data": {
"item_positions": {},
"size": "Vector2i(7, 7)"
},
"name": &"@Node@21882"
}
},
"items": [{
"properties": {
"stack_size": {
"type": 2,
"value": "2"
}
},
"protoset": "res://itemki.json",
"prototype_id": "BIG_DUCK"
}, {
"properties": {
"rotated": {
"type": 1,
"value": "true"
}
},
"protoset": "res://itemki.json",
"prototype_id": "Dzida"
}],
"node_name": "InventoryMid",
"protoset": "res://itemki.json"
}

[node name="GridConstraint" type="Node" parent="InventoryMid"]
script = ExtResource("10_6njuc")
size = Vector2i(7, 7)

[node name="@Node@21842" type="Node" parent="InventoryMid"]
script = ExtResource("10_6njuc")
size = Vector2i(7, 7)

[node name="@Node@21847" type="Node" parent="InventoryMid"]
script = ExtResource("10_6njuc")
size = Vector2i(7, 7)

[node name="_Node_21842" type="Node" parent="InventoryMid"]
script = ExtResource("10_6njuc")
size = Vector2i(7, 7)

[node name="_Node_21847" type="Node" parent="InventoryMid"]
script = ExtResource("10_6njuc")
size = Vector2i(7, 7)

[node name="@Node@21884" type="Node" parent="InventoryMid"]
script = ExtResource("10_6njuc")
size = Vector2i(7, 7)

[node name="@Node@21882" type="Node" parent="InventoryMid"]
script = ExtResource("10_6njuc")
size = Vector2i(7, 7)

[node name="InventoryMid2" type="Node" parent="."]
script = ExtResource("9_a6m37")
protoset = ExtResource("10_1wuv2")
_serialized_format = {
"constraints": {
"res://addons/gloot/core/constraints/grid_constraint.gd": {
"data": {
"item_positions": {},
"size": "Vector2i(4, 4)"
},
"name": &"@Node@21883"
}
},
"items": [{
"properties": {
"stack_size": {
"type": 2,
"value": "2"
}
},
"protoset": "res://itemki.json",
"prototype_id": "BIG_DUCK"
}, {
"properties": {
"rotated": {
"type": 1,
"value": "true"
}
},
"protoset": "res://itemki.json",
"prototype_id": "Dzida"
}],
"node_name": "InventoryMid2",
"protoset": "res://itemki.json"
}

[node name="GridConstraint" type="Node" parent="InventoryMid2"]
script = ExtResource("10_6njuc")
size = Vector2i(4, 4)

[node name="@Node@21843" type="Node" parent="InventoryMid2"]
script = ExtResource("10_6njuc")
size = Vector2i(4, 4)

[node name="@Node@21848" type="Node" parent="InventoryMid2"]
script = ExtResource("10_6njuc")
size = Vector2i(4, 4)

[node name="_Node_21843" type="Node" parent="InventoryMid2"]
script = ExtResource("10_6njuc")
size = Vector2i(4, 4)

[node name="_Node_21848" type="Node" parent="InventoryMid2"]
script = ExtResource("10_6njuc")
size = Vector2i(4, 4)

[node name="@Node@21885" type="Node" parent="InventoryMid2"]
script = ExtResource("10_6njuc")
size = Vector2i(4, 4)

[node name="@Node@21883" type="Node" parent="InventoryMid2"]
script = ExtResource("10_6njuc")
size = Vector2i(4, 4)

[node name="InventoryRight" type="Node" parent="."]
script = ExtResource("9_a6m37")
protoset = ExtResource("8_mr2pf")
_serialized_format = {
"constraints": {
"res://addons/gloot/core/constraints/grid_constraint.gd": {
"data": {
"item_positions": {
"1": "Vector2i(0, 1)"
},
"size": "Vector2i(5, 5)"
},
"name": &"@Node@21884"
}
},
"items": [{
"properties": {
"max_stack_size": {
"type": 2,
"value": "5"
},
"stack_size": {
"type": 2,
"value": "2"
}
},
"protoset": "res://tests/data/protoset_grid.json",
"prototype_id": "item_1x1"
}, {
"properties": {
"max_stack_size": {
"type": 2,
"value": "5"
},
"stack_size": {
"type": 2,
"value": "2"
}
},
"protoset": "res://tests/data/protoset_grid.json",
"prototype_id": "item_2x2"
}],
"node_name": "InventoryRight",
"protoset": "res://tests/data/protoset_grid.json"
}

[node name="GridConstraint" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21844" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21849" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="_Node_21844" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="_Node_21849" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21886" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)

[node name="@Node@21884" type="Node" parent="InventoryRight"]
script = ExtResource("10_6njuc")
size = Vector2i(5, 5)
